# prag

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  WALLI_SPLIT_PLAN.md  next.config.ts  package-lock.json  package.json  pyproject.toml
public/: manifest.json  sw.js
scripts/: enrich_places.py  fetch_photos.py  fetch_places.py  generate_descriptions.py  places_enrichment.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/album/: route.ts
src/app/api/album/comments/: route.ts
src/app/api/groups/: route.ts
src/app/api/location/: route.ts
src/app/api/receipt/: route.ts
src/app/api/split/: route.ts
src/app/api/split/reset/: route.ts
src/app/api/split/settle/: route.ts
src/app/api/users/: route.ts
src/app/place/[category]/[id]/: page.tsx
src/app/split/: layout.tsx  page.tsx
src/components/: AlbumPanel.tsx  BottomNav.tsx  DirectionsBar.tsx  Header.tsx  InfoPanel.tsx  LiveLocation.tsx  Map.tsx  Menu.tsx  OfflineButton.tsx  PlaceList.tsx  PlacePanel.tsx  RoutePlanner.tsx  SearchBar.tsx  SplitPanel.tsx  TransportPanel.tsx  Weather.tsx
src/data/: collections.ts  enrichment.generated.ts  enrichment.ts  places.ts
src/data/categories/: bars.ts  cafes.ts  clubs.ts  restaurants.ts  sights.ts  spas.ts
src/lib/: types.ts  useDarkMode.ts  useFavorites.ts  useGeolocation.ts
